<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true"
    android:background="@color/vs_white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:title="@string/premium_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/premium_desc"
            android:textSize="13sp"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/swPremium"
            android:text="@string/premium_switch"
            android:textAllCaps="true"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvNotice"
            android:text="@string/premium_notice"
            android:textSize="12sp"
            android:layout_marginTop="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!-- Botones de servicios -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCounsel"
            android:text="@string/premium_btn_counsel"
            android:textAllCaps="true"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnChat"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:text="@string/premium_btn_chat"
            android:textAllCaps="true"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>
